sandbox/output
AnagramTest.java:16: error: cannot find symbol
        assertThat(result, is(Arrays.asList("a")));
                              ^
  symbol:   variable Arrays
  location: class AnagramTest
1 error
